--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -9,6 +9,75 @@
 ;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+;----------------------------------------------------------
+;	          T E X T    M O D U L E S
+;----------------------------------------------------------
+
+[module/Pipe]
+type = custom/text
+content = "|"
+content-foreground = ${colors.odWhite}
+content-background = ${colors.odBlack}
+content-padding = 1
+
+[module/LtStripe]
+type = custom/text
+content = "%{T3}%{T-}"
+content-foreground = ${colors.odGutterGrey}
+content-background = ${colors.bg}
+
+[module/LtArrow1]
+type = custom/text
+content = "%{T2}%{T-}"
+content-foreground = ${colors.mtTeal}
+content-background = ${colors.odGutterGrey}
+
+[module/LtArrow2]
+type = custom/text
+content = "%{T2}%{T-}"
+content-foreground = ${colors.odGutterGrey}
+content-background = ${colors.odLightRed}
+
+[module/LtArrow3]
+type = custom/text
+content = "%{T2}%{T-}"
+content-foreground = ${colors.odLightRed}
+content-background = ${colors.odGutterGrey}
+
+[module/RtStripe]
+type = custom/text
+content = "%{T3}%{T-}"
+content-foreground = ${colors.odGreen}
+content-background = ${colors.bg}
+
+[module/RtArrow1]
+type = custom/text
+content = "%{T2}%{T-}"
+content-foreground = ${colors.odGutterGrey}
+content-background = ${colors.odGreen}
+
+[module/RtArrow2]
+type = custom/text
+content = "%{T2}%{T-}"
+content-foreground = ${colors.odGreen}
+content-background = ${colors.bg}
+
+[module/RtArrow3]
+type = custom/text
+content = "%{T2}%{T-}"
+content-foreground = ${colors.odGutterGrey}
+content-background = ${colors.bg}
+
+[module/MidArrowLt]
+type = custom/text
+content = "%{T3}%{T-}"
+content-foreground = ${colors.odGutterGrey}
+content-background = ${colors.bg}
+;◥ ◤◢ ◣
+[module/MidArrowRt]
+type = custom/text
+content = "%{T3}%{T-}"
+content-foreground = ${colors.odBlue}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; Module alsa
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -125,6 +194,9 @@ time-format = %H:%M
 ;   <ramp-capacity>
 ;   <animation-charging>
 format-charging = <animation-charging> <label-charging>
+format-charging-foreground = ${colors.fg}
+format-charging-background = ${colors.odGutterGrey}
+format-charging-padding = 1
 
 ; Available tags:
 ;   <label-discharging> (default)
@@ -132,6 +204,9 @@ format-charging = <animation-charging> <label-charging>
 ;   <ramp-capacity>
 ;   <animation-discharging>
 format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-foreground = ${colors.fg}
+format-discharging-background = ${colors.odGutterGrey}
+format-discharging-padding = 1
 
 ; Available tags:
 ;   <label-full> (default)
@@ -157,13 +232,19 @@ label-discharging = %percentage%% (%time%)
 ;   %percentage% (default) - is set to 100 if full-at is reached
 ;   %percentage_raw%
 label-full =  FULL
+label-full-foreground = ${colors.mtGreen}
 
 ; Only applies if <ramp-capacity> is used
-ramp-capacity-0 = 
-ramp-capacity-1 = 
+ramp-capacity-0 = 
+ramp-capacity-0-foreground = ${colors.mtRed}
+ramp-capacity-1 = 
+ramp-capacity-1-foreground = ${colors.mtOrange}
 ramp-capacity-2 = 
+ramp-capacity-2-foreground = ${colors.mtAmber}
 ramp-capacity-3 = 
+ramp-capacity-3-foreground = ${colors.mtLime}
 ramp-capacity-4 = 
+ramp-capacity-4-foreground = ${colors.mtLightGreen}
 
 
 ; Only applies if <bar-capacity> is used
@@ -171,10 +252,11 @@ bar-capacity-width = 10
 
 ; Only applies if <animation-charging> is used
 animation-charging-0 = 
-animation-charging-1 = 
+animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
+animation-charging-foreground = ${colors.mtYellow}
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 
@@ -203,25 +285,37 @@ interval = 0.5
 ;   <bar-load>
 ;   <ramp-load>
 ;   <ramp-coreload>
-format = <label> <ramp-coreload>
+format-prefix = " "
+format = <ramp-coreload> <label>
+format-foreground = ${colors.fg}
+format-background = ${colors.odGutterGrey}
+format-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
 ;   %percentage-sum% - Cumulative load on all cores
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
-label =  %percentage%%
+label = %percentage%%
 
 ; Spacing between individual per-core ramps
-ramp-coreload-spacing = 1
+ramp-coreload-spacing =
 ramp-coreload-0 = ▁
+ramp-coreload-0-foreground = ${colors.fg}
 ramp-coreload-1 = ▂
+ramp-coreload-1-foreground = ${colors.mtGreen}
 ramp-coreload-2 = ▃
+ramp-coreload-2-foreground = ${colors.mtLightGreen}
 ramp-coreload-3 = ▄
+ramp-coreload-3-foreground = ${colors.mtYellow}
 ramp-coreload-4 = ▅
+ramp-coreload-4-foreground = ${colors.mtAmber}
 ramp-coreload-5 = ▆
+ramp-coreload-5-foreground = ${colors.mtOrange}
 ramp-coreload-6 = ▇
+ramp-coreload-6-foreground = ${colors.mtDeepOrange}
 ramp-coreload-7 = █
+ramp-coreload-7-foreground = ${colors.mtRed}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; Module date
@@ -249,16 +343,15 @@ date-alt = "  (%a) %b %d, %Y"
 ; Available tags:
 ;   <label> (default)
 format = <label>
-format-background = ${colors.bg}
 format-foreground = ${colors.fg}
+format-background = ${colors.odGutterGrey}
+format-padding = 1
 
 ; Available tokens:
 ;   %date%
 ;   %time%
 ; Default: %date%
 label = %time% %date%
-label-font = 3
-label-foreground = ${colors.fg}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; Module filesystem
@@ -362,12 +455,13 @@ fuzzy-match = true
 
 ; ws-icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-default = 
+ws-icon-default = ﱤ
+; ws-icon-0 = 1;
+; ws-icon-1 = 2;
+; ws-icon-2 = 3;
+; ws-icon-3 = 4;
+; ws-icon-4 = 5;
+
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
 ; NOTE: Icon will be available as the %icon% token inside label-*
@@ -376,6 +470,7 @@ ws-icon-default =
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
 ;   <label-mode> (default)
 format = <label-state> <label-mode>
+format-background = ${colors.odGutterGrey}
 
 ; Available tokens:
 ;   %mode%
@@ -390,11 +485,9 @@ label-mode-background = #e60053
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-focused = %icon% %index%
-label-focused-foreground = #ffffff
-label-focused-background = #3f3f3f
-label-focused-underline = #fba922
-label-focused-padding = 4
+label-focused = 
+label-focused-foreground = ${colors.odMagenta}
+label-focused-padding = 1
 
 ; Available tokens:
 ;   %name%
@@ -402,8 +495,9 @@ label-focused-padding = 4
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-unfocused = %index%
-label-unfocused-padding = 4
+label-unfocused = ﱤ
+label-unfocused-foreground = ${colors.odWhite}
+label-unfocused-padding = ${self.label-focused-padding}
 
 ; Available tokens:
 ;   %name%
@@ -411,9 +505,8 @@ label-unfocused-padding = 4
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-visible = %index%
-label-visible-underline = #555555
-label-visible-padding = 4
+label-visible = 
+label-visible-padding = ${self.label-focused-padding}
 
 ; Available tokens:
 ;   %name%
@@ -421,15 +514,14 @@ label-visible-padding = 4
 ;   %index%
 ;   %output%
 ; Default: %icon%  %name%
-label-urgent = %index%
-label-urgent-foreground = #000000
-label-urgent-background = #bd2c40
-label-urgent-padding = 4
+label-urgent = 
+label-urgent-foreground = ${colors.fg}
+label-urgent-padding = ${self.label-focused-padding}
 
 ; Separator in between workspaces
-label-separator = |
-label-separator-padding = 2
-label-separator-foreground = #ffb52a
+label-separator =
+label-separator-padding =
+label-separator-foreground =
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; Module memory
@@ -452,7 +544,11 @@ interval = 5
 ;   <bar-swap-free>
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
-format = <label> <bar-used>
+format-prefix = " "
+format = <ramp-used> <label>
+format-foreground = ${colors.fg}
+format-background = ${colors.odGutterGrey}
+format-padding = 1
 
 ; Available tokens:
 ;   %percentage_used% (default)
@@ -472,28 +568,36 @@ format = <label> <bar-used>
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label =  %gb_used%/%gb_free%
+label = %percentage_used%% | 易 %percentage_swap_used%%
 
 ; Only applies if <bar-used> is used
 bar-used-indicator =
-bar-used-width = 50
-bar-used-foreground-0 = #55aa55
-bar-used-foreground-1 = #557755
-bar-used-foreground-2 = #f5a70a
-bar-used-foreground-3 = #ff5555
+bar-used-width = 21
+bar-used-foreground-0 = ${colors.mtGreen}
+bar-used-foreground-1 = ${colors.mtLightGreen}
+bar-used-foreground-2 = ${colors.mtGrShade6}
+bar-used-foreground-3 = ${colors.mtGrShade8}
 bar-used-fill = ▐
 bar-used-empty = ▐
-bar-used-empty-foreground = #444444
+bar-used-empty-foreground = ${colors.mtGrey}
 
 ; Only applies if <ramp-used> is used
 ramp-used-0 = ▁
+ramp-used-0-foreground = ${colors.mtGrey}
 ramp-used-1 = ▂
+ramp-used-1-foreground = ${colors.mtLightGreen}
 ramp-used-2 = ▃
+ramp-used-2-foreground = ${colors.mtLime}
 ramp-used-3 = ▄
+ramp-used-3-foreground = ${colors.mtYellow}
 ramp-used-4 = ▅
+ramp-used-4-foreground = ${colors.mtAmber}
 ramp-used-5 = ▆
+ramp-used-5-foreground = ${colors.mtOrange}
 ramp-used-6 = ▇
+ramp-used-6-foreground = ${colors.mtDeepOrange}
 ramp-used-7 = █
+ramp-used-7-foreground = ${colors.mtRed}
 
 ; Only applies if <ramp-free> is used
 ramp-free-0 = ▁
@@ -558,6 +662,9 @@ enable-scroll = true
 ;   <ramp>
 ;   <bar>
 format = <ramp> <label>
+format-foreground = ${colors.odBlack}
+format-background = ${colors.odLightRed}
+format-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -761,6 +868,9 @@ interval = 5
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <ramp-volume> <label-volume>
+format-volume-foreground = ${colors.odBlack}
+format-volume-background = ${colors.odLightRed}
+format-volume-padding = 1
 
 ; Available tags:
 ;   <label-muted> (default)
@@ -777,7 +887,9 @@ format-volume = <ramp-volume> <label-volume>
 ;   %percentage% (default)
 ;   %decibels% (unreleased)
 label-muted = ﱝ Muted
-label-muted-foreground = ${colors.fg}
+label-muted-foreground = ${colors.odCommentGrey}
+label-muted-background = ${colors.odBlue}
+label-muted-padding = 1
 
 ; Only applies if <ramp-volume> is used
 ramp-volume-0 = 奄
@@ -905,7 +1017,7 @@ label = %temperature-c%
 ;   %temperature-c%   (default, temperature in °C)
 ;   %temperature-f%   (temperature in °F)
 label-warn = %temperature-c%
-label-warn-foreground = #f00
+label-warn-foreground = ${colors.mtRed}
 
 ; Requires the <ramp> tag
 ; The icon selection will range from `base-temperature` to `warn-temperature`,
@@ -930,7 +1042,9 @@ blacklist-0 = Scroll Lock
 ;   <label-layout> (default)
 ;   <label-indicator> (default)
 format = <label-layout> <label-indicator>
-format-spacing = 0
+format-foreground = ${colors.odBlack}
+format-background = ${colors.odBlue}
+format-padding = 1
 
 ; Available tokens:
 ;   %layout%
@@ -938,10 +1052,7 @@ format-spacing = 0
 ;   %number%
 ;   %icon%
 ; Default: %layout%
-label-layout =  %name%
-label-layout-padding = 2
-label-layout-background = ${colors.bg}
-label-layout-foreground = ${colors.fg}
+label-layout = %icon% %name%
 
 ; layout-icon-[0-9]+ = layout;icon
 ; Assign each layout an icon that will be available as %icon% token for the
@@ -953,24 +1064,25 @@ layout-icon-default = 
 ; indicator-icon-[0-9]+ = indicator;off icon;on icon
 ; Provides the content of the %icon% token in label-indicator-*
 indicator-icon-default = 
-indicator-icon-0 = Caps Lock;;
+indicator-icon-0 = Caps Lock;;בּ
 indicator-icon-1 = Scroll Lock;;SL
-indicator-icon-2 = Num Lock;;
+indicator-icon-2 = Num Lock;;
 
 ; Replaces label-indicator
 ; Available tokens:
 ;   %name%
 ;   %icon%
 ; Default: %name%
-label-indicator-on = +%icon%
-label-indicator-on-margin = 1
+label-indicator-on = %icon%
+label-indicator-on-padding-left = 1
+label-indicator-on-padding-right = 2
 ; Available tokens:
 ;   %name%
 ;   %icon%
 ; Default: (none)
 ; label-indicator-off =
 label-indicator-off =
-label-indicator-off-margin = 1
+label-indicator-off-margin = 0
 
 ; Replaces label-indicator-* if for specific indicators
 ; Available tokens:
@@ -993,9 +1105,9 @@ type = internal/xwindow
 ; Available tags:
 ;   <label> (default)
 format = <label>
-format-background = ${colors.bg}
-format-foreground = ${colors.fg}
-format-padding = 4
+format-foreground = ${colors.odBlack}
+format-background = ${colors.odGreen}
+format-padding = 1
 
 ; Available tokens:
 ;   %title%
