--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: System San Francisco Display 11
+font pango: System San Francisco Display 0
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -193,17 +193,17 @@ set $FLOAT      floating enable
 set $UNFLOAT    floating disable
 
 # Disable window title and borders for new tiling windows
-default_border pixel 3
+default_border pixel 4
 
 # Enable window title and borders for new floating windows
-default_floating_border pixel 3
+default_floating_border pixel 4
 
 # Set floating maximum and minumum sizes 
 floating_maximum_size 1000 x 900
 floating_minimum_size -1 x -1
 
 # Disabling window titlebars
-# for_window [class=".*"] border pixel 0
+# for_window [class=".*"] border pixel 3
 
 ####################################################################################
 # Startup manager                                                                  #
@@ -250,17 +250,17 @@ exec_always --no-startup-id sh $scripts_dir/start-greenclip-daemon.sh
 # Colors                                                                           #
 ####################################################################################
 #
-set $border_color           #61afef
-set $unfocused_border_color #98c379
+set $border_color           #98c379
+set $unfocused_border_color #283c34
 set $inactive_border_color  #abb2bf
 set $urgent_border_color    #e06c75
 
-set $bg_color 	            #61afef
-set $unfocused_bg_color     #98c379
+set $bg_color 	            #98c379
+set $unfocused_bg_color     #283c34
 set $inactive_bg_color      #abb2bf
 set $urgent_bg_color        #e06c75
 
-set $text_color             #ffffff
+set $text_color             #283c34#ffffff
 set $unfocused_text_color   #858774
 set $inactive_text_color    #858774
 set $urgent_text_color      #0c1b21
