--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -888,7 +888,7 @@ format-volume-padding = 1
 ;   %decibels% (unreleased)
 label-muted = ﱝ Muted
 label-muted-foreground = ${colors.odCommentGrey}
-label-muted-background = ${colors.odBlue}
+label-muted-background = ${colors.odLightRed}
 label-muted-padding = 1
 
 ; Only applies if <ramp-volume> is used
