--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -375,13 +375,13 @@ bell_on_tab yes
 
 #: Color scheme {{{
 
-foreground #eeeeee
+foreground #abb2bf
 background #282828
 
 #: The foreground and background colors
 
-background_opacity         0.9
-# dynamic_background_opacity yes
+background_opacity         0.95
+# dynamic_background_opacity no
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
