Additional touches for waybar

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -583,7 +583,7 @@ bar-used-empty-foreground = ${colors.mtGrey}
 
 ; Only applies if <ramp-used> is used
 ramp-used-0 = ▁
-ramp-used-0-foreground = ${colors.mtGrey}
+ramp-used-0-foreground = ${colors.fg}
 ramp-used-1 = ▂
 ramp-used-1-foreground = ${colors.mtLightGreen}
 ramp-used-2 = ▃
@@ -1041,7 +1041,7 @@ blacklist-0 = Scroll Lock
 ;   <label-layout> (default)
 ;   <label-indicator> (default)
 format = <label-layout> <label-indicator>
-format-foreground = ${colors.odBlack}
+format-foreground = ${colors.fg}
 format-background = ${colors.odBlue}
 format-padding = 1
 
